@@ -8,6 +8,7 @@ import com.akto.dao.JiraIntegrationDao;
 import com.akto.dao.context.Context;
 import com.akto.dao.test_editor.YamlTemplateDao;
 import com.akto.dao.testing.BidirectionalSyncSettingsDao;
+import com.akto.dao.testing.RemediationsDao;
 import com.akto.dao.testing.TestingRunResultDao;
 import com.akto.dao.testing_run_findings.TestingRunIssuesDao;
 import com.akto.dto.Config.AktoHostUrlConfig;
@@ -22,6 +23,7 @@ import com.akto.dto.test_editor.YamlTemplate;
 import com.akto.dto.test_run_findings.TestingIssuesId;
 import com.akto.dto.test_run_findings.TestingRunIssues;
 import com.akto.dto.testing.BidirectionalSyncSettings;
+import com.akto.dto.testing.Remediation;
 import com.akto.dto.testing.TestResult;
 import com.akto.dto.testing.TestingRunResult;
 import com.akto.jobs.JobScheduler;
@@ -43,10 +45,11 @@ import com.mongodb.BasicDBObject;
 import com.mongodb.client.model.*;
 import com.opensymphony.xwork2.Action;
 
+import java.net.URI;
+import java.util.function.Function;
 import lombok.Setter;
 
 import java.io.File;
-import java.net.URL;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -57,6 +60,7 @@ import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import okhttp3.*;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.struts2.interceptor.ServletRequestAware;
 import org.bson.Document;
@@ -65,12 +69,13 @@ import org.bson.types.ObjectId;
 
 import com.akto.dao.AccountSettingsDao;
 
+import static com.akto.utils.jira.Utils.buildAdditionalIssueFieldsForJira;
 import static com.akto.utils.jira.Utils.buildApiToken;
 import static com.akto.utils.jira.Utils.buildBasicRequest;
-import static com.akto.utils.jira.Utils.retryWithoutGzipRequest;
-import static com.akto.utils.jira.Utils.handleError;
-import static com.akto.utils.jira.Utils.getJiraTicketUrlPair;
 import static com.akto.utils.jira.Utils.buildPayloadForJiraTicket;
+import static com.akto.utils.jira.Utils.getJiraTicketUrlPair;
+import static com.akto.utils.jira.Utils.handleError;
+import static com.akto.utils.jira.Utils.retryWithoutGzipRequest;
 
 public class JiraIntegrationAction extends UserAction implements ServletRequestAware {
 
@@ -110,6 +115,8 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             .readTimeout(60, TimeUnit.SECONDS)
             .writeTimeout(60, TimeUnit.SECONDS)
             .build();
+
+    private static final String REMEDIATION_INFO_URL = "tests-library-master/remediation/%s.md";
 
     @Setter
     private String title;
@@ -606,7 +613,17 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             addActionError("Jira is not integrated.");
             return ERROR.toUpperCase();
         }
-        BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData);
+
+        TestingRunIssues testingRunIssues = TestingRunIssuesDao.instance.findOne(
+            Filters.eq(Constants.ID, jiraMetaData.getTestingIssueId()));
+        YamlTemplate yamlTemplate = YamlTemplateDao.instance.findOne(
+            Filters.eq(Constants.ID, jiraMetaData.getTestingIssueId().getTestSubCategory()),
+            Projections.include(YamlTemplate.INFO));
+        Remediation remediation = RemediationsDao.instance.findOne(
+            Filters.eq(Constants.ID,
+                getRemediationId(jiraMetaData.getTestingIssueId().getTestSubCategory())));
+        BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData, testingRunIssues, yamlTemplate.getInfo(),
+            remediation);
 
         reqPayload.put("fields", fields);
 
@@ -767,10 +784,21 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
 
         List<TestingRunResult> testingRunResultList = new ArrayList<>();
         int existingIssues = 0;
-        List<TestingRunIssues> testingRunIssuesList = TestingRunIssuesDao.instance.findAll(Filters.and(
-                Filters.in("_id", issuesIds),
-                Filters.exists("jiraIssueUrl", true)
-        ));
+        List<TestingRunIssues> testingRunIssuesList = TestingRunIssuesDao.instance.findAll(
+            Filters.in("_id", issuesIds),
+            Projections.include(Constants.ID, TestingRunIssues.JIRA_ISSUE_URL,
+                TestingRunIssues.TEST_RUN_ISSUES_STATUS, TestingRunIssues.LAST_UPDATED, TestingRunIssues.CREATION_TIME,
+                TestingRunIssues.KEY_SEVERITY, TestingRunIssues.IGNORE_REASON)
+        );
+
+        Map<TestingIssuesId, TestingRunIssues> issuesEligibleForJiraMap = testingRunIssuesList.stream()
+            .filter(issue -> StringUtils.isBlank(issue.getJiraIssueUrl()))
+            .collect(Collectors.toMap(TestingRunIssues::getId, Function.identity()));
+
+        testingRunIssuesList = testingRunIssuesList.stream().filter(
+            issue -> StringUtils.isNotBlank(issue.getJiraIssueUrl())
+        ).collect(Collectors.toList());
+
         Set<TestingIssuesId> testingRunIssueIds = new HashSet<>();
         for (TestingRunIssues testingRunIssues : testingRunIssuesList) {
             testingRunIssueIds.add(testingRunIssues.getId());
@@ -800,7 +828,7 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             try {
                 String inputUrl = testingIssuesId.getApiInfoKey().getUrl();
 
-                URL url = new URL(inputUrl);
+                URI url = new URI(inputUrl);
                 String hostname = url.getHost();
                 String endpoint = url.getPath();
 
@@ -841,8 +869,14 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             return Action.SUCCESS.toUpperCase();
         }
 
+        Map<String, Remediation> remediationMap = getRemediationMap(testingSubCategories);
+
         for (JiraMetaData jiraMetaData : jiraMetaDataList) {
-            BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData);
+            TestingIssuesId issuesId = jiraMetaData.getTestingIssueId();
+            BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData,
+                issuesEligibleForJiraMap.get(issuesId),
+                testSubTypeToInfoMap.get(issuesId.getTestSubCategory()),
+                remediationMap.get(getRemediationId(issuesId.getTestSubCategory())));
 
             // Prepare the issue object
             BasicDBObject issueObject = new BasicDBObject();
@@ -932,7 +966,8 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         return Action.SUCCESS.toUpperCase();
     }
 
-    private BasicDBObject jiraTicketPayloadCreator(JiraMetaData jiraMetaData) {
+    private BasicDBObject jiraTicketPayloadCreator(JiraMetaData jiraMetaData, TestingRunIssues issue,
+        Info info, Remediation remediation) {
         String endpoint = jiraMetaData.getEndPointStr().replace("Endpoint - ", "");
         String truncatedEndpoint = endpoint;
         if(endpoint.length() > 30) {
@@ -950,9 +985,31 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         contentList.add(buildContentDetails("Issue link - Akto dashboard", jiraMetaData.getIssueUrl()));
         contentList.add(buildContentDetails(jiraMetaData.getIssueDescription(), null));
 
+        List<BasicDBObject> additionalFields = buildAdditionalIssueFieldsForJira(info, issue, remediation);
+        if (!CollectionUtils.isEmpty(additionalFields)) {
+            contentList.addAll(additionalFields);
+        }
+
         BasicDBObject fields = buildPayloadForJiraTicket(summary, this.projId, this.issueType, contentList,jiraMetaData.getAdditionalIssueFields());
         fields.put("labels", new String[] {JobConstants.TICKET_LABEL_AKTO_SYNC});
         return fields;
+    }
+
+    private Map<String, Remediation> getRemediationMap(List<String> testingSubCategories) {
+        List<Remediation> remediationList = RemediationsDao.instance.findAll(
+            Filters.in(Constants.ID,
+                testingSubCategories.stream().map(this::getRemediationId)
+                    .collect(Collectors.toList())));
+
+        return remediationList.stream()
+            .collect(Collectors.toMap(
+                Remediation::getid,
+                Function.identity()
+            ));
+    }
+
+    private String getRemediationId(String testSubCategory) {
+        return String.format(REMEDIATION_INFO_URL, testSubCategory);
     }
 
     public String getBaseUrl() {
